perf: complete README and debug

--- a/templates/manuscript/latex/template.tex
+++ b/templates/manuscript/latex/template.tex
@@ -144,7 +144,7 @@ BACKGROUND HERE
 \label{sec:conclusion}
 CONCLUSIONS HERE
 
-\bibliography{reference.bib}
+\bibliography{references}
 \bibliographystyle{icml2023}
 
 \end{document}
